tests/misc_tests/type_ne_ui_tests/constructor_bound-err.rs
use typewit::TypeNe;

fn unconstrained_with_any_call<T, U>() -> Option<TypeNe<T, U>> {
    TypeNe::<T, U>::with_any()
}



fn main() {}